add SongResource : for loading archive song charts and assets with no extractng.